syntax = "proto3";

package questionnaire;

option go_package = "github.com/yshujie/questionnaire-scale/internal/apiserver/interface/grpc/proto/questionnaire";

// 问卷服务 - 对外提供查询功能
service QuestionnaireService {
  // 获取问卷详情
  rpc GetQuestionnaire(GetQuestionnaireRequest) returns (GetQuestionnaireResponse);
  
  // 获取问卷列表
  rpc ListQuestionnaires(ListQuestionnairesRequest) returns (ListQuestionnairesResponse);
}

// 问卷信息
message Questionnaire {
  string code = 1;
  string title = 2;
  string description = 3;
  string img_url = 4;
  string status = 5;
  string version = 6;
  repeated Question questions = 7;
  string created_at = 8;
  string updated_at = 9;
}

// 问题信息
message Question {
  string code = 1;
  string type = 2;
  string title = 3;
  string tips = 4;
  string placeholder = 5;
  repeated Option options = 6;
  repeated ValidationRule validation_rules = 7;
  CalculationRule calculation_rule = 8;
}

// 选项信息
message Option {
  string code = 1;
  string content = 2;
  int32 score = 3;
}

// 验证规则
message ValidationRule {
  string rule_type = 1;
  string target_value = 2;
}

// 计算规则
message CalculationRule {
  string formula_type = 1;
}

// 获取问卷请求
message GetQuestionnaireRequest {
  string code = 1;
}

// 获取问卷响应
message GetQuestionnaireResponse {
  Questionnaire questionnaire = 1;
}

// 获取问卷列表请求
message ListQuestionnairesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string status = 3;
  string title = 4;
}

// 获取问卷列表响应
message ListQuestionnairesResponse {
  repeated Questionnaire questionnaires = 1;
  int64 total = 2;
} 